# yapykaldi

./: .clang-format  .flake8  .gitignore  .pylintrc  CMakeLists.txt  README.md  package.xml  setup.py
src/cpp/: python_extensions.cpp
src/cpp/include/: nnet3_wrappers.h
src/cpp/src/: gmm_wrappers.cpp  nnet3_wrappers.cpp
src/python/yapykaldi/: __init__.py  adaptation.py  asr.py  gmm.py  grammar.py  logger.py  nnet3.py  phonetics.py  speech_lexicon.py  speech_transcripts.py  utils.py
src/python/yapykaldi/asr/: __init__.py  _base.py  asr.py  pipeline.py  sinks.py  sources.py
src/python/yapykaldi/audio_handling/: sinks.py  sources.py
src/python/yapykaldi/io/: __init__.py  _base.py  sinks.py  sources.py
src/yapykaldi/: __init__.py  gmm.py  nnet3.py
src/yapykaldi/csrc/: gmm_wrappers.cpp  gmm_wrappers.h  python_extensions.cpp
test/: test_asr.py  test_audio.py  test_io.py  test_live.py  test_nnet3.py
