<?xml version="1.0"?>
<package format="2">
  <name>yapykaldi</name>
  <version>0.0.1</version>
  <description>Yet Another Python interface to Kaldi Speech Recognition Toolkit</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/tue-robotics/yapykaldi</url>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
